fix: minor visibility issues

--- a/catppuccin.user.less
+++ b/catppuccin.user.less
@@ -2,7 +2,7 @@
 @name Flavortown Catppuccin
 @namespace elijah629
 @homepageURL https://github.com/elijah629/flavortown-catppuccin
-@version 2025.12.23-5
+@version 2025.12.23-6
 @updateURL https://github.com/elijah629/flavortown-catppuccin/raw/main/catppuccin.user.less
 @description Soothing pastel theme for hackclub/flavortown
 @author elijah629
@@ -477,7 +477,7 @@
     }
 
     .shop-item-card__image {
-      background: @accent;
+      background: @surface2;
     }
 
     .shop-order__content {
@@ -495,6 +495,7 @@
     }
 
     .shop-item-card__stock-badge {
+      color: @base;
       background: @red;
     }
 
